# getfem

./: .gitignore  .travis.yml  AUTHORS  BUGS  BUGS_AND_REMARKS  CMakeLists.txt  CONTAINS  CONTRIBUTORS  COPYING  ChangeLog  GNU_FDL_V3  GNU_GCC_RUNTIME_EXCEPTION  GNU_GPL_V3  GNU_LGPL_V3  INSTALL  Makefile.am  Makefile.in  Makefile_gmm.am  NEWS  README  TOBEDONE  TODO_FOR2.0  aclocal.m4  autogen.sh  codemeta.json  configure  configure.ac  configure.in  configure_gmm.ac  extract_gmm++  getfem-config-notinstalled.in  getfem-config.in  gmm-config.in  libtool  pyproject.toml  requirements.txt
contrib/: Makefile.am  Makefile.in  compare_solutions.C  draw_mesh  draw_mesh_doedges.C  draw_mesh_example1.mesh  draw_mesh_example2.mesh  draw_mesh_example3.mesh  draw_mesh_example4.mesh  draw_mesh_example5.mesh  draw_mesh_example6.mesh  getfem_import_export.C  interpole_solution.C
contrib/aposteriori/: Makefile.am  aposteriori.cc  aposteriori.m  aposteriori.param  aposteriori.pl  aposteriori_laplacian.cc  aposteriori_laplacian.param  bimaterial_crack_test.param
contrib/bimat_contact_crack_test/: Makefile.am  bimaterial_crack_test.cc  bimaterial_crack_test.m  bimaterial_crack_test.matlab  bimaterial_crack_test.param  crack.cc  crack.param
contrib/bimaterial_crack_test/: Makefile.am  bimaterial_crack_test.cc  bimaterial_crack_test.param  bimaterial_crack_test.pl  crack.cc  crack.param  crack_exact_solution.cc  crack_exact_solution.h  getfem_Xfem.cc  getfem_Xfem.h  getfem_spider_fem.h
contrib/contact_grd_trans/: Makefile.am  contact.cc  contact.param  contact_continuation.cc  contact_continuation_load.cc  contact_continuation_load.param  contact_continuation_time.cc  contact_continuation_time.param  my_getfem_Coulomb_friction.h
contrib/continuum_mechanics/: Makefile.am  QLV_viscoelasticity.py  plasticity_fin_strain_lin_hardening_axisymmetric.py  plasticity_fin_strain_lin_hardening_plane_strain.py  plasticity_finite_strain_linear_hardening_tension_3D.py  plasticity_finite_strain_linear_hardening_tension_axisymmetric.py  plasticity_finite_strain_linear_hardening_tension_plane_strain.py
contrib/crack_plate/: Makefile.am  crack_bilaplacian.cc  crack_bilaplacian.h  crack_bilaplacian.param  crack_bilaplacian_mixed.param  crack_bilaplacian_moment.cc  crack_bilaplacian_problem.cc  crack_bilaplacian_sif.cc  crack_bilaplacian_singularities.cc  crack_bilaplacian_tools.cc  crack_mindlin.cc  crack_mindlin.param  crack_mindlin.pl  (+7 more)
cubature/: CUBE4D_5.IM  CUBE4D_9.IM  GAUSS.IM.tar  GAUSSLOBATTO1D1.IM  GAUSSLOBATTO1D11.IM  GAUSSLOBATTO1D13.IM  GAUSSLOBATTO1D15.IM  GAUSSLOBATTO1D17.IM  GAUSSLOBATTO1D19.IM  GAUSSLOBATTO1D21.IM  GAUSSLOBATTO1D23.IM  GAUSSLOBATTO1D25.IM  GAUSSLOBATTO1D27.IM  GAUSSLOBATTO1D29.IM  GAUSSLOBATTO1D3.IM  GAUSSLOBATTO1D31.IM  GAUSSLOBATTO1D33.IM  GAUSSLOBATTO1D35.IM  GAUSSLOBATTO1D37.IM  GAUSSLOBATTO1D39.IM  GAUSSLOBATTO1D41.IM  GAUSSLOBATTO1D43.IM  GAUSSLOBATTO1D45.IM  GAUSSLOBATTO1D47.IM  GAUSSLOBATTO1D49.IM  GAUSSLOBATTO1D5.IM  GAUSSLOBATTO1D51.IM  GAUSSLOBATTO1D53.IM  GAUSSLOBATTO1D55.IM  GAUSSLOBATTO1D57.IM  GAUSSLOBATTO1D59.IM  GAUSSLOBATTO1D61.IM  GAUSSLOBATTO1D63.IM  GAUSSLOBATTO1D65.IM  GAUSSLOBATTO1D67.IM  GAUSSLOBATTO1D69.IM  GAUSSLOBATTO1D7.IM  GAUSSLOBATTO1D71.IM  GAUSSLOBATTO1D73.IM  GAUSSLOBATTO1D75.IM  (+151 more)
interface/: ChangeLog  Makefile.am  README.txt  TOBEDONE  gnumex
src/: Makefile  Makefile.am  Makefile.in  Makefile_gmm.am  bgeot_abstract_linalg.h  bgeot_approx_integration.C  bgeot_approx_integration.h  bgeot_comma_init.h  bgeot_config.h  bgeot_convex.h  bgeot_convex_hull.h  bgeot_convex_intersect.h  bgeot_convex_ref.C  bgeot_convex_ref.cc  bgeot_convex_ref.h  bgeot_convex_ref_simplexified.cc  bgeot_convex_structure.C  bgeot_convex_structure.cc  bgeot_convex_structure.h  bgeot_ftool.cc  bgeot_generic_solvers.h  bgeot_geometric_trans.C  bgeot_geometric_trans.cc  bgeot_geometric_trans.h  bgeot_geotrans_inv.C  bgeot_geotrans_inv.cc  bgeot_geotrans_inv.h  bgeot_imbricated_box.cc  bgeot_imbricated_box.h  bgeot_integration.C  bgeot_integration.h  bgeot_kdtree.C  bgeot_kdtree.cc  bgeot_kdtree.h  bgeot_linalg_interface.h  bgeot_matrix.h  bgeot_mesh.h  bgeot_mesh_structure.C  bgeot_mesh_structure.cc  bgeot_mesh_structure.h  (+275 more)
superlu/: BLAS.c  BLAS_f2c.h  LOCAL_PATCHES.txt  Makefile.am  ccolumn_bmod.c  ccolumn_dfs.c  ccopy_to_ucol.c  cgscon.c  cgsequ.c  cgsrfs.c  cgssv.c  cgssvx.c  cgstrf.c  cgstrs.c  clacon.c  clangs.c  claqgs.c  cmemory.c  cmyblas2.c  colamd.c  colamd.h  cpanel_bmod.c  cpanel_dfs.c  cpivotL.c  cpivotgrowth.c  cpruneL.c  creadhb.c  csnode_bmod.c  csnode_dfs.c  csp_blas2.c  csp_blas3.c  csp_defs.h  cutil.c  dcolumn_bmod.c  dcolumn_dfs.c  dcomplex.c  dcopy_to_ucol.c  dgscon.c  dgsequ.c  dgsrfs.c  (+106 more)
tests/: Makefile  Makefile.am  Makefile.in  Makefile_gmm.am  assembly.pl  bilaplacian.cc  bilaplacian.param  bilaplacian.pl  crack.cc  crack.param  crack.pl  crackPlate.cc  crackPlate.param  cyl_slicer.cc  cyl_slicer.pl  dynamic_array.C  dynamic_array.cc  dynamic_array.pl  dynamic_friction.C  dynamic_friction.cc  dynamic_friction.net  dynamic_friction.param  dynamic_friction.param2  dynamic_friction.pl  dynamic_friction_anim.net  dynamic_tas.C  dynamic_tas.cc  dynamic_tas.pl  elasto_statique.C  elasto_statique.dotest  elasto_statique.param  elasto_statique.pl  elasto_statique_prisme.C  elastostatic.C  elastostatic.cc  elastostatic.param  elastostatic.pl  geo_trans.C  geo_trans.cc  geo_trans.pl  (+171 more)
tests-2.0/: Makefile.am  Makefile.in  bilaplacian.cc  bilaplacian.param  bilaplacian.pl  dynamic_array.cc  dynamic_array.pl  dynamic_friction.cc  dynamic_friction.param  dynamic_friction.pl  dynamic_tas.cc  dynamic_tas.pl  elastostatic.cc  elastostatic.param  elastostatic.pl  geo_trans_inv.cc  geo_trans_inv.pl  helmholtz.cc  helmholtz.pl  integration.cc  integration.pl  laplacian.cc  laplacian.pl  nonlinear_elastostatic.cc  nonlinear_elastostatic.param  nonlinear_elastostatic.pl  plasticity.cc  plasticity.pl  plate.cc  plate.param  plate.pl  poly.cc  poly.pl  schwarz_additive.cc  schwarz_additive.pl  stokes.cc  stokes.param  stokes.pl  test_assembly.cc  test_grad.cc  (+25 more)
(+2102 files in other folders)
